--- a/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.html
@@ -12,11 +12,10 @@
     <button
       pButton
       type="button"
-      label="Submit"
       class="p-button p-mt-2 submit"
     (click)="submitAnswers()"
     >Submit</button>
-    <button pButton type="button" label="Retry" class="p-button p-mt-2 retry" (click)="retryQuiz()">Retry</button>
+    <button pButton type="button"  class="p-button p-mt-2 retry" (click)="retryQuiz()">Retry</button>
     </div>
   </div>
  
