--- a/projekt_egzaminacyjny/src/app/modules/home/components/display-all-quizes/display-all-quizes.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/components/display-all-quizes/display-all-quizes.component.html
@@ -1,3 +1,4 @@
+<app-controls-panel  (filtersApplied)="applyFilters($event)"  *ngIf="isAuthentiticated()"></app-controls-panel>
 
 <div class="quiz-grid">
   
