add option to display all quizes in filters

--- a/projekt_egzaminacyjny/src/app/modules/home/components/controls-panel/controls-panel.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/components/controls-panel/controls-panel.component.html
@@ -4,6 +4,7 @@
 <div class="filter-option">
     <p>Filter by Category:</p>
     <select [(ngModel)]="filterByCategory" (change)="applyFilters()">
+        <option value="all">All</option> 
       <option *ngFor="let category of categoryOptions" [value]="category">{{ category }}</option>
     </select>
 </div>
