--- a/projekt_egzaminacyjny/src/app/shared/components/header/header.component.html
+++ b/projekt_egzaminacyjny/src/app/shared/components/header/header.component.html
@@ -7,7 +7,7 @@
 
 
   <div class="search-container">
-    <input pInputText placeholder="Search quizzes" class="p-inputtext p-mr-2">
+    <!-- <input pInputText placeholder="Search quizzes"  class="p-inputtext p-mr-2"> -->
   </div>
 
   <div class="auth-actions">
