--- a/projekt_egzaminacyjny/src/app/modules/home/components/controls-panel/controls-panel.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/components/controls-panel/controls-panel.component.html
@@ -1,4 +1,3 @@
-
 <!-- eslint-disable @angular-eslint/template/elements-content -->
 <button (click)="navigateToCreateQuiz()" pButton type="button" label="Create New Quiz" class="p-button-rounded p-button-outlined create-quiz-button"></button>
 <div class="filter-option">
@@ -11,14 +10,17 @@
     <input type="text" [(ngModel)]="filterByTitle" (input)="applyFilters()">
 
     <p>Show only with likes</p>
-     <input type="checkbox" (change)="toggleShowOnlyWithLikes($event)">
+    <input type="checkbox" (change)="toggleShowOnlyWithLikes($event)">
 
-     <div class="sorting-dropdown">
-        <button class="sort-button">Sort by:</button>
-        <select [(ngModel)]="sortBy" (change)="applyFilters()">
-            <option value="default">Default</option>
-            <option value="most-likes">Most Likes</option>
-            <option value="name">Name</option>
-            <option value="date">Date</option>
-        </select>
+    <div class="sorting-dropdown">
+        <div class="sort-by-container">
+            <p>Sort by:</p>
+            <select [(ngModel)]="sortBy" (change)="applyFilters()">
+                <option value="default">Default</option>
+                <option value="most-likes">Most Likes</option>
+                <option value="name">Name</option>
+                <option value="date">Date</option>
+            </select>
+        </div>
+    </div>
 </div>
