--- a/projekt_egzaminacyjny/src/app/modules/quiz/components/create-quiz-form/create-quiz-form.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/components/create-quiz-form/create-quiz-form.component.html
@@ -90,5 +90,5 @@
     </div>
     <button type="button" (click)="addQuestion()" pButton icon="pi pi-plus" label="Add New Question"></button>
     <br>
-    <button type="submit" pButton label="Submit" icon="pi pi-check"></button>
+    <button type="submit" pButton label="Submit" icon="pi pi-check"  class="submit-button"></button>
 </form>
