--- a/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.html
@@ -1,26 +1,26 @@
-<div>
-  <app-header></app-header>
-  <div class="wrapper">
-    <h1>{{ quiz?.title }}</h1>
-    <button pButton type="button" class="p-button p-mt-2 edit" (click)="editQuiz()">Edit Quiz</button>
-    <button pButton type="button" class="p-button p-mt-2 delete" (click)="deleteQuiz()">Delete Quiz</button>
-    <div *ngFor="let question of questions" class="wrapper-content">
-      <app-quiz-question-container
-        [question]="question"
-        [submitted]="submitted"
-      ></app-quiz-question-container>
-    </div>
-    <div>
-    <button
-      pButton
-      type="button"
-      class="p-button p-mt-2 submit"
-    (click)="submitAnswers()"
-    >Submit</button>
-    <button pButton type="button"  class="p-button p-mt-2 retry" (click)="retryQuiz()">Retry</button>
-    </div>
+<!-- eslint-disable @angular-eslint/template/elements-content -->
+<app-header></app-header>
+<div class="wrapper">
+  <h1>{{ quiz?.title }}</h1>
+  <div class="button-group">
+    <button pButton type="button" class="p-button edit" (click)="editQuiz()">Edit Quiz</button>
+    <button pButton type="button" class="p-button delete" (click)="displayModal = true">Delete Quiz</button>
   </div>
- 
 
+  <div *ngFor="let question of questions" class="wrapper-content">
+    <app-quiz-question-container [question]="question" [submitted]="submitted"></app-quiz-question-container>
+  </div>
+  <div>
+    <button pButton type="button" class="p-button submit" (click)="submitAnswers()">Submit</button>
+    <button pButton type="button" class="p-button retry" (click)="retryQuiz()">Retry</button>
+  </div>
   <app-footer></app-footer>
+
+  <p-dialog header="Delete Quiz" [(visible)]="displayModal" [modal]="true" [closable]="false" [responsive]="true" [style]="{width: '50vw'}">
+    <p>Are you sure you want to delete this quiz?</p>
+    <p-footer>
+      <button pButton type="button" label="No" (click)="displayModal = false" class="p-button-text"></button>
+      <button pButton type="button" label="Yes" (click)="deleteQuiz()" class="p-button-danger"></button>
+    </p-footer>
+  </p-dialog>
 </div>
