--- a/projekt_egzaminacyjny/src/app/modules/quiz/components/create-quiz-form/create-quiz-form.component.scss
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/components/create-quiz-form/create-quiz-form.component.scss
@@ -1,14 +1,28 @@
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+form{
+    width: 80%;
+}
+}
+.go-back{
+ background-color: white;
+ color: #007bff;
+
+
+}
 .custom-dropdown {
   position: relative;
   display: inline-block;
-  width: 200px; /* Adjust width as needed */
+  width: 200px; 
 }
 
 .selected-item {
   border: 1px solid #ccc;
   padding: 8px;
   cursor: pointer;
-  border-radius: 4px; /* Rounded border */
+  border-radius: 4px;
 }
 
 .dropdown-list {
@@ -69,7 +83,7 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3; 
+  background-color: #b8d0ea; 
 }
 
 form {
